fixed collapsing cards, modified new button

--- a/src/app/components/staff/work-screen/work-screen.component.scss
+++ b/src/app/components/staff/work-screen/work-screen.component.scss
@@ -193,6 +193,18 @@ button {
     width: 348px;
 }
 
+.new-function-button {
+    border-radius: 2px;
+    background-color: #ffffff;
+    color: #398ef2;
+    font-size: 13px;
+    border: 1px solid #398ef2;
+    margin: 5px 0px 0px 8px;
+}
+
+.hidden {
+    display: none;
+}
 
 // li
 // {
